Review and post rebase fixes Optimized the post list not to find currentUserLastPost if Update status post header is not visible Fixed the styling of the channel header custom status Fixed the coloring of the Set status menu option in status dropdown Fixed the styling of the custom status modal Fixed the styling of the custom status tooltip everywhere Fixed the styling of the Update your status post header Added custom status emoji in the sidebar channel where new component is used after rebase Fixed the styling of the new emoji added in the sidebar channel list

--- a/components/custom_status/custom_status.scss
+++ b/components/custom_status/custom_status.scss
@@ -1,7 +1,5 @@
 .StatusModal {
     width: 600px;
-    //to override the styles from GenericModal and modal-dialog class
-    margin: 30px auto !important;
 
     .modal-dialog {
         margin: auto;
@@ -45,7 +43,7 @@
 
     .StatusModal__input {
         position: relative;
-        width: calc(100% - 15px);
+        width: calc(100% - 24px);
     }
 }
 
@@ -58,8 +56,16 @@
 
 .StatusModal__clear-container {
     position: absolute;
-    top: 14px;
-    right: 16px;
+    top: 15px;
+    right: 14px;
+
+}
+
+.input-clear-x{
+    color: var(--center-channel-color-56);
+    .icon{
+        font-size: 20px;
+    }
 }
 
 .StatusModal__emoji-button {
@@ -126,7 +132,7 @@
 }
 
 .statusSuggestion  {
-    height: 280px;
+    height: 232px;
     overflow: auto;
     margin-top: 8px;
 }
@@ -144,12 +150,13 @@
 .statusSuggestion__row {
     display: flex;
     font-size: inherit;
-    min-height: 44px;
+    min-height: 40px;
     align-items: center;
     padding: 0 20px;
     color: var(--center-channel-color);
     &:hover {
         background-color: rgba(var(--center-channel-color-rgb), 0.08);
+        border-radius: 4px;
     }
 
     &:active {
@@ -158,7 +165,8 @@
     }
 }
 .statusSuggestion__icon{
-    margin-right: 10px;
+    margin-right: 16px;
+    margin-bottom: 1px;
 }
 
 .statusSuggestion__title{
@@ -179,8 +187,15 @@
 
 .suggestion-clear{
    margin-left: auto;
+   margin-top: 3px;
 }
 
 .custom-status{
     display: flex;
+}
+
+#custom-status-tooltip{
+    p{
+        margin: 0;
+    }
 }
