--- a/components/post_view/post_header/post_header.scss
+++ b/components/post_view/post_header/post_header.scss
@@ -6,13 +6,13 @@
     .post__header-set-custom-status {
         display: revert;
         background: rgba(var(--center-channel-color-rgb), 0.08);
-        padding: 0 4px;
+        padding: 0 6px;
         border-radius: 4px;
         margin-left: 8px;
         
         .post__header-set-custom-status-icon > svg {
-            height: 14px;
-            width: 14px;
+            height: 12px;
+            width: 12px;
             vertical-align: middle;
             background: inherit;
             fill: rgba(var(--center-channel-color-rgb), 0.56);
